--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,21 @@
-FROM 16-alpine3.11
+FROM node:16-alpine 
 
-# Set working directory
+#Set working directory
 WORKDIR /app
 
-# Add `/app/node_modules/.bin` to $PATH
+#Add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
-# Install app dependencies
-# Copies package.json and package-lock.json to Docker environment
+#Install app dependencies
+#Copies package.json and package-lock.json to Docker environment
 COPY package*.json ./
 
-# Install all node packages
-RUN npm Install
+#Install all node packages
+RUN npm install
 
-# Copy everything over to Docker environment
+#Copy everything over to Docker environment
 COPY . ./
 EXPOSE 3000
 
-# start app
+#Start app
 CMD ["npm", "start"]
