add multi stage build to Dockerfile, update docker-compose.yml 443MB to 23.5MB

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16-alpine 
+FROM node:16-alpine as builder
 
 #Set working directory
 WORKDIR /app
@@ -15,7 +15,25 @@ RUN npm install
 
 #Copy everything over to Docker environment
 COPY . ./
-EXPOSE 3000
+RUN npm run build
 
-#Start app
-CMD ["npm", "start"]
+#Stage 2 
+################################
+# pull nginx:alpine 9.82MB
+FROM nginx:alpine
+
+#Copy React to container directory
+#Set working directory to nginx resource directory
+WORKDIR /usr/share/nginx/html
+
+#Remove default nginx static resource
+RUN rm -rf ./*
+
+#Copy static build directory from builder stage
+COPY --from=builder /app/build .
+
+#Make port 80 availabe to world outside this container
+EXPOSE 80
+
+#Run Nginx with global directives and deamon off
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
